--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -73,9 +73,9 @@ html body {
   input.input {
     background-color: white;
   }
-  .logo {
-    width: 310px;
-    height: 210px;
+  img.logo {
+    max-width: 310px !important;
+    height: auto;
     animation: bounceIn 2.6s;
     transform: rotate(0deg) scale(1) translateZ(0);
     transition: all 0.4s cubic-bezier(0.8, 1.8, 0.75, 0.75);
