--- a/src/css/academic-theme.scss
+++ b/src/css/academic-theme.scss
@@ -72,6 +72,7 @@ html {
       // width: 100%;
       border-width: 0 !important;
       border-radius: 0 !important;
+      background-color: var(--color-primary);
     }
 
     .desktop-mode {
